[package]
name = "bevy-jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_prototype_lyon = "0.4.0"
heron = { version = "2.0.1", features = ["2d"] }
rand = { version = "0.8.5", feaatures = ["std_rng"] }
bevy_tweening = "0.3.2"

[dependencies.bevy]
version = "0.6.1"
default-features = false
features = [
  "render",
  "bevy_winit",
  "bevy_gilrs",
  "x11"
]

[dependencies.bevy_kira_audio]
version = "0.8.0"
default-features = false
features = ["wav"]